<resources>
    <string name="app_name">Pyram3d Studio</string>
    <string name="navigation_drawer_open">Abrir navegación</string>
    <string name="navigation_drawer_close">Cerrar navegación</string>
    <string name="nav_header_title">Pyram3d</string>s
    <string name="nav_header_subtitle">Tu compañero de geometría</string>
    <string name="nav_header_desc">Navegación</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_home">Inicio</string>

    <string name="main_fab_descriptor">Calcular</string>

    <string name="fragment_home_did_you_know">Sabías qué…</string>
    <string name="fragment_home_learn_more">Saber Más</string>
    <string name="fragment_home_curiosity_1">Las pirámides de Egipto, fueron construidas hace 4 mil años, hoy siendo la maravilla más antigua y la única que se conserva.</string>
    <string name="fragment_home_curiosity_2">El primer arquitecto registrado en la historia, es Imhotep, responsable de la construcción de la pirámide escalonada de Zoser.</string>
    <string name="fragment_home_curiosity_3">Las pirámides se pueden clasificar según el número de lados que tiene su base: triángular, cuadrangular, pentagonal y hexagonal.</string>

    <string name="fragment_pyramid_height_label">Altura:</string>
    <string name="fragment_pyramid_base_label">Lado:</string>
    <string name="fragment_pyramid_sides_label">Tipo de Base:</string>
    <string name="fragment_pyramid_calc_label">Calcular</string>
    <string name="fragment_pyramid_regular_label">Es regular</string>
    <string name="fragment_pyramid_edit_label">Editar</string>
    <string name="fragment_pyramid_calc_zero">La medida no puede ser cero, porque no es un valor graficable ni medible y por lo tanto la pirámide deja de existir.</string>
    <string name="fragment_pyramid_area_label">Área:</string>
    <string name="fragment_pyramid_apothem_label">Apotema:</string>
    <string name="fragment_pyramid_volume_label">Volúmen:</string>
    <string name="fragment_pyramid_volume_half_label">Volúmen del tronco:</string>
    <string name="fragment_pyramid_type_label">Tipo:</string>
    <string name="fragment_pyramid_type_regular">Regular</string>
    <string name="fragment_pyramid_type_irregular">Irregular</string>
    <string name="error_numeric_values_only">Debes proveer sólo valores numericos</string>
    <string name="fragment_pyramid_meassure_label">%1$sm</string>
    <string name="fragment_pyramid_meassure2_label">%1$sm<sup>2</sup></string>
    <string name="fragment_pyramid_meassure3_label">%1$sm<sup>3</sup></string>
    <string name="fragment_pyramid_error_format">Se deben ingresar valores numéricos.</string>
    <string name="fragment_pyramid_error_data">Ha ocurrido un error al intentar procesar el cálculo.</string>
    <string-array name="fragment_pyramid_sides_spinners">
        <item>Triangular</item>
        <item>Cuadrangular</item>
        <item>Pentagonal</item>
        <item>Hexagonal</item>
    </string-array>

</resources>