<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.pyramid.PyramidFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            card:cardCornerRadius="4dp"
            card:cardElevation="5dp"
            card:cardMaxElevation="8dp"
            card:layout_constraintEnd_toEndOf="parent"
            card:layout_constraintStart_toStartOf="parent"
            card:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/pyramid_height_label"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fragment_pyramid_height_label"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/pyramid_height"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/pyramid_base_label"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fragment_pyramid_base_label"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/pyramid_base"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/pyramid_sides_label"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fragment_pyramid_sides_label"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/pyramid_sides"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />
                </LinearLayout>

                <Button
                    android:id="@+id/button_calculate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/fragment_pyramid_calc_label" />

                <Button
                    android:id="@+id/button_edit"
                    android:textColor="@color/red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/fragment_pyramid_edit_label"
                    style="?android:attr/borderlessButtonStyle"
                    android:visibility="gone"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/pyramid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            card:cardCornerRadius="4dp"
            card:cardElevation="5dp"
            card:cardMaxElevation="8dp"
            card:layout_constraintEnd_toEndOf="parent"
            card:layout_constraintStart_toStartOf="parent"
            card:layout_constraintTop_toTopOf="parent"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/height_label"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fragment_pyramid_height_label"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/base_label"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fragment_pyramid_base_label"
                        android:textSize="16sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin">

                    <TextView
                        android:id="@+id/sides_label"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:text="@string/fragment_pyramid_sides_label"
                        android:textSize="16sp"/>
                </LinearLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>